--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-native-vector-icons": "^4.4.3",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+	"react-native-gifted-chat": "^0.3.0"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
