--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "lodash": "^4.17.4",
     "react": "16.0.0",
     "react-native": "0.50.3",
+    "react-native-camera-roll-picker": "^1.2.3",
+    "react-native-fetch-blob": "^0.10.8",
+    "react-native-gifted-chat": "^0.3.0",
     "react-native-router-flux": "^3.40.1",
+    "react-native-uuid-generator": "^3.0.2",
     "react-native-vector-icons": "^4.4.3",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
-	"react-native-gifted-chat": "^0.3.0"
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
