--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "lodash": "^4.17.4",
     "react": "16.0.0",
     "react-native": "0.50.3",
-    "react-native-camera-roll-picker": "^1.2.3",
-    "react-native-fetch-blob": "^0.10.8",
+    "react-native-dropdownalert": "^3.3.0",
+    "react-native-easy-toast": "^1.0.9",
+    "react-native-fcm": "^11.3.1",
     "react-native-gifted-chat": "^0.3.0",
+    "react-native-camera-roll-picker": "^1.2.3",
     "react-native-router-flux": "^3.40.1",
+    "react-native-fetch-blob": "^0.10.8",
+    "react-native-simple-toast": "0.0.8",
     "react-native-uuid-generator": "^3.0.2",
     "react-native-vector-icons": "^4.4.3",
     "react-redux": "^5.0.6",
